Terminar de incluir la media de las satisfacciones

--- a/src/main/resources/templates/form-filtrer.html
+++ b/src/main/resources/templates/form-filtrer.html
@@ -77,6 +77,9 @@
         </li>
     </ul>
 </div>
+<hr>
+<p>Número de encuestas completadas: <span th:text="${total}"></span></p>
+<p>Edad media de los encuestados: <span th:text="${edadMedia}"></span></p>
 <a th:href="@{/new}">Crear formulario</a>
 </body>
 </html>
