--- a/src/main/resources/templates/satisfaction-filtred.html
+++ b/src/main/resources/templates/satisfaction-filtred.html
@@ -65,6 +65,7 @@
         </li>
     </ul>
 </div>
+<p>La cantidad de encuestados con esta satisfacción son: <span th:text="${cantidad}"></span> </p>
 <a th:href="@{filtrer}">Volver</a>
 </body>
 </html>
