Arreglar los porcentajes

--- a/src/main/resources/templates/form-filtrer.html
+++ b/src/main/resources/templates/form-filtrer.html
@@ -80,6 +80,11 @@
 <hr>
 <p>Número de encuestas completadas: <span th:text="${total}"></span></p>
 <p>Edad media de los encuestados: <span th:text="${edadMedia}"></span></p>
+<ul>
+    <li th:each="porcentaje: ${porcentajes}">
+        <p th:text="${porcentaje.getText()}"></p>
+    </li>
+</ul>
 <a th:href="@{/new}">Crear formulario</a>
 </body>
 </html>
